--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@hookform/resolvers": "^3.10.0",
         "@material-tailwind/react": "^2.1.10",
         "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-dropdown-menu": "^2.1.4",
         "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-select": "^2.1.4",
         "@radix-ui/react-separator": "^1.1.1",
