--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
         "@hookform/resolvers": "^3.10.0",
         "@material-tailwind/react": "^2.1.10",
         "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.4",
         "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-select": "^2.1.4",
         "@radix-ui/react-separator": "^1.1.1",
         "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-toast": "^1.2.5",
         "@tanstack/react-table": "^8.20.6",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "lodash": "^4.17.21",
+        "lodash.throttle": "^4.1.1",
         "lucide-react": "^0.469.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -33,6 +37,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
+        "@types/lodash.throttle": "^4.1.9",
         "@types/node": "^22.10.5",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
