--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,9 @@ jobs:
             - name: Build
               env:
                   NODE_ENV: production
-                  API_URL: ${{ secrets.API_URL }}
-                  KAKAO_JS_KEY: a1976e486ba5c5de98358fed5bc150a5
-                  ENV: development
+                  VITE_API_URL: ${{ secrets.API_URL }}
+                  VITE_KAKAO_JS_KEY: a1976e486ba5c5de98358fed5bc150a5
+                  VITE_ENV: development
               run: npm run build
 
             - name: Copy files to EC2
